# erizo_agent

./: .gitignore  CMakeLists.txt  autobuild  config.json  log4cxx.properties
erizo_agent_cpp/: CMakeLists.txt  main.cpp
erizo_agent_cpp/common/: config.cpp  config.h  logger.h  port_manager.cpp  port_manager.h  semaphore.cpp  semaphore.h  utils.h
erizo_agent_cpp/core/: erizo_agent.cpp  erizo_agent.h
erizo_agent_cpp/model/: client.h  erizo.h  erizo_agent.h
erizo_agent_cpp/rabbitmq/: amqp_cli.cpp  amqp_cli.h  amqp_helper.cpp  amqp_helper.h  amqp_recv.cpp  amqp_recv.h
erizo_agent_cpp/redis/: acl_redis.cpp  acl_redis.h  redis_helper.cpp  redis_helper.h
